[tool.poetry]
name = "py50-statannotations"
version = "0.0.1"
description = "A fork of statannotations for use with py50-streamlit application"
authors = ["Tony E. Lin <tonyelin@tmu.edu>"]
license = "MIT"
readme = "README_pypi.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.12.1"
matplotlib = ">=2.2.2"
pandas = ">=0.23.0,<2.0.0"
scipy = ">=1.1.0"
seaborn = "==0.12.2"
statsmodels = ">0.14"
packaging = ">=20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
